fix thumbnail alignment somewhat

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,1 +1,3 @@
 .angular-google-map-container { height: 800px; }
+.thumbnail { height: 600px }
+.thumbnail img { max-height: 400px }
